Changement du titre du café

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="block_content_header">
-            <a id="anchor_title" href="./index.html" target="_self"><h1>Good Coffee</h1></a>
+            <a id="anchor_title" href="./index.html" target="_self"><h1>Business Coffee</h1></a>
             <ul id="nav_header">
                 <li class="nav_list">Contact</li>
                 <li class="nav_list">Menu</li>
