Structure du main et ajout du CSS

--- a/index.html
+++ b/index.html
@@ -17,5 +17,65 @@
             </ul>
         </div>
     </header>
+    <main>
+        <section class="all_section">
+            <div id="block_jumbotron">
+                <div id="block_slogan">
+                    <h2>"Venez dégustez nos cafés réalisés par les meilleurs torréfacteurs du pays..." </h2>
+                </div>
+                <div>
+                    <img id="jumbotron" src="./assets/images/jumbotron.jpg" alt="image_cafe">
+                </div>
+            </div>
+        </section>
+        <section class="all_section">
+            <div id="block_jumbotron">
+                <div>
+                    <img id="jumbotron" src="./assets/images/unsplash-image-d1ngW7SNehM.jpg" alt="salle_café">
+                </div>
+                <div id="block_slogan">
+                    <h2>"Un lieu d'échange où faire de nouvelles rencontres..." </h2>
+                </div>
+            </div>
+        </section>
+        <section class="all_section">
+            <div id="block_jumbotron">
+                <div id="block_slogan">
+                    <h2>"Un endroit aussi où travailler en étant décompresser et être créatif..." </h2>
+                </div>
+                <div>
+                    <img id="jumbotron" src="./assets/images/coffee-shop-office.jpg" alt="main_table_ordinateur">
+                </div>
+            </div>
+        </section>
+        <div id="spotify">
+            <div>
+                <a href="https://open.spotify.com/intl-fr" target="_blank" ><img id="music" src="./assets/images/Spotify_logo_with_text.svg.png" alt="logo music"></a>
+            </div>
+            <div>
+                <a href="https://www.deezer.com/fr/offers?utm_source=adwords&utm_medium=search&utm_campaign=acq_fr_sea-brd_web_search_perf_tnb-directsub_pure&utm_content=alloffers_1st-party-web-pixels_brd-exact&utm_term=%5Bdeezer%5D&utm_source=adwords&utm_medium=search&utm_campaign=acq_fr_sea-brd_web_search_perf_tnb-directsub_pure&utm_content=brd_premium_tnb_pure-exact&utm_term=deezer&gad_source=1&gclid=Cj0KCQjw-r-vBhC-ARIsAGgUO2AJY2BWXvZBdqRdtNgYT6V4D-_IRkeLilIC1DlZTDgYT0SSZm_F9_oaAo8uEALw_wcB" target="_blank" ><img id="music_" src="./assets/images/deezer.jpeg" alt="logo music"></a>
+            </div>
+        </div>
+        <section id="menus">
+            <div class="formules">
+                <h3>CAFÉS</h3>
+                <ul>
+                    <li>Expresso</li>
+                    <li>Macchiato</li>
+                    <li>Café Vanille</li>
+                    <li>Café noir</li>
+                </ul>
+            </div>
+            <div class="formules">
+                <h3>PÂTISSERIES/SANDWICHERIES</h3>
+                <ul>
+                    <li>Fruits rouges</li>
+                    <li>Chocolat</li>
+                    <li>Fraise</li>
+                    <li>Vanille bourbon</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
