Modification du text

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div>
                 <h2>ÉVENTS : INAUGURATION DU BUSINESS CAFÉ </h2>
                 <p class="party">Une soirée est organisé pour inaugurer le Business Café</p>
-                <p class="party">Ouverture 18h00-3h00</p>
-                <p class="party">Happy Hour pour cette évents</p>
+                <p class="party">Ouverture 19h00-3h00</p>
+                <p class="party">Happy Hour pour cette Évent</p>
             </div>
             <div>
                 <img id="soiree" src="./assets/images/soiréechic.jpeg" alt="">
